# The-UNIVERSAL-Agent

./: README.md  docker-compose.yml  nginx.conf
app-backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app-backend/references/: Project-Architecture-1.drawio  generation_response.json
app-backend/src/: server.py
app-backend/src/config/: config.py
app-backend/src/docs/: GEMINI_SYSTEM_PROMPT.md
app-backend/src/endpoints/: generation.py
app-backend/src/models/s3/: upload_files.py  utils.py
app-backend/src/rag/: config.py  main.py  server.py
app-backend/src/rag/tools/: basics.py  code_sandbox.py  files_generation.py  satellites.py
app-backend/src/schema/: generation_streaming.py  output_streaming.py
web-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web-frontend/references/: server_gen_streaming.json
web-frontend/src/app/: globals.css  layout.tsx  page.tsx
web-frontend/src/app/(client)/chat/: layout.tsx  page.tsx
web-frontend/src/app/(client)/test/: page.tsx
web-frontend/src/components/: AuroraBackground.tsx  GradientText.tsx  Orb.tsx  Shuffle.tsx
web-frontend/src/components/Providers/: historyProvider.tsx
web-frontend/src/components/pages/: BadgesContainer.tsx  ChatBar.tsx  ChatMessage.tsx  ChatWindow.tsx  MessageFormat.tsx
web-frontend/src/components/ui/: container-text-flip.tsx  stars-background.tsx
web-frontend/src/lib/: db.ts
web-frontend/src/lib/types/: client.schema.ts  db.schema.ts
(+17 files in other folders)
