[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.42",
    "fastapi[standard]>=0.117.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
]
